--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-bootstrap": "^2.7.2",
-    "react-dom": "18.2.0"
+    "bootstrap": "5.3.8",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.0.10",
+    "next": "16.0.10",
+    "react": "19.2.3",
+    "react-bootstrap": "2.10.10",
+    "react-dom": "19.2.3"
   }
 }
